# CPPGame

./: CMakeLists.txt
cmake/: FindSDL2_image.cmake
src/: GameLoopHandler.cpp  GameLoopHandler.h  Player.cpp  Player.h  RenderWindow.cpp  RenderWindow.h  main.cpp
